--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- link tailwind -->
     <link href="dist/output.css" rel="stylesheet" />
-    <title>ACT 4</title>
+    <title>Marcmuu Hotel</title>
 </head>
     
     <style>
